--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <body>
         <p id="narrator">eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</p>
         <hr>
-        <button id="writeCode">Write Line</button>
+        <button id="writeCode" onclick="startWriting()">Write Line</button>
+        <hr>
+        <div id="lines">Lines written: 0</div>
+        <div id="money"></div>
+        <hr>
+        <h4>Shop:</h4>
         <script src="index.js" async defer></script>
     </body>
 </html>
